--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -35,6 +35,7 @@
         <button id="submit">Tạo tài khoản</button>
         <span class="invalid-feedback"></span>
       </p>
+      <p class="register-feedback" id="register-feedback" style="font-size: medium; color:green;"></p>
 	  <p class="success"></p>
       <p class="login" >Bạn đã có tài khoản? <a href="/">Đăng nhập tại đây</a>.</p>
     </form>
